EME: Implement Session Closed algorithm

Update MediaKeySession to implement the Session Closed algorithm
as outlined in the EME spec. This replaces a previous change that
implemented this as part of Clear Key key system only.

BUG=622956,624192
TEST=updated test passes

Review-Url: https://codereview.chromium.org/2406073002
Cr-Commit-Position: refs/heads/master@{#424524}

Former-commit-id: beab77818bad0932063375097110e6048632a193